--- a/MENU.ipynb
+++ b/MENU.ipynb
@@ -20,9 +20,9 @@
       "  Welcome to The Gene Finder, your bioinformatics partner.\n",
       "  This program can:\n",
       "  *find the complementary nucleotide\n",
-      "  *computes the reverse complementary sequence of DNA for the specfied DNA sequence\n",
+      "  *compute the reverse complementary sequence of DNA for the specfied DNA sequence\n",
       "  *transcribe DNA sequences\n",
-      "  *computes the maximum length of the longest noncoding ORF i.e. shuffled from specified DNA\n",
+      "  *compute the maximum length of the longest noncoding ORF i.e. shuffled from specified DNA\n",
       "  *translate genes to proteins\n",
       "            \n",
       "Let's get started!\n"
